# Dircolors

./: .gitignore  Attribute.hs  Glob.hs  LICENSE  Main.hs  P.hs  README.md  Rule.hs  attribute-syntax.txt  dircolors.in  glob-syntax.txt  mkdircolors.cabal  syntax.txt
src/: Attribute.hs  Glob.hs  Main.hs  P.hs  Rule.hs
