name:          Dircolors
synopsis:      A preprocessor for slightly more expressive .dircolors
version:       0.1.0.0
license:       PublicDomain
license-file:  LICENSE
author:        Andy Morris
maintainer:    andy@adradh.org.uk
category:      System
build-type:    Simple
cabal-version: >= 1.10

extra-source-files:
  attribute-syntax.txt, glob-syntax.txt, syntax.txt

executable mkdircolors
  main-is: Main.hs
  other-modules: Attribute, Glob, P, Rule
  build-depends:
    base == 4.5.*,
    syb == 0.3.*,
    parsec == 3.1.*,
    wl-pprint-extras == 3.*
  default-language: Haskell2010
  default-extensions:
    DeriveDataTypeable, OverloadedStrings
